# jackofclubs

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  CollisionDetection.txt  TODO.txt  doxygen.cfg  install-deps.sh  lineCount.sh  todo.sh
Assets/Animations/: Color Selection Preview.controller  ColorMenuClosed.anim  ColorMenuOpen.anim
Assets/Materials/: blockTexture.mat
Assets/Prefabs/: Chunk.prefab  FPSController.prefab  Loading Bar Container.prefab  Player.prefab
Assets/Resources/Materials/: Colormap.mat
Assets/Scenes/: Menu Scene.unity  World Scene.unity
Assets/Scripts/: Block.cs  BlockAir.cs  BlockModificationEngine.cs  Chunk.cs  ColorPreviewImageUpdater.cs  ColorSelection.cs  LoadingBarScript.cs  MeshData.cs  NetworkComponentDisabler.cs  NetworkDataRequests.cs  ProtoArrayFix.cs  RayCasting.cs  SerializableColor.cs  SerializableVector3.cs  Serialization.cs  SliderTextUpdater.cs  TerrainHelper.cs  WidthHeightEqualizer.cs  World.cs  WorldMetaData.cs  WorldPos.cs
Assets/Standard Assets/Characters/FirstPersonCharacter/Scripts/: FirstPersonController.cs  MouseLook.cs
Assets/UnityVC/: UnityVC.cginc
ProjectSettings/: EditorBuildSettings.asset  InputManager.asset  ProjectSettings.asset
include/: Block.h  Chunk.h  Exception.h  Game.h  IRenderable.h  NullptrException.h  OutOfRangeException.h  Player.h  RenderEngine.h  World.h  tuple_fix.h
include/Debug/: DebugOptions.h
include/Debug/Graphics/: FPSCounter.h
include/Exception/: AlreadyInitializedException.h  Exception.h  NotYetInitializedException.h  NullMaybeException.h  NullptrException.h  OutOfRangeException.h  SegmentationFaultException.h  ShaderCompilationFailureException.h
include/Graphics/Components/: Button.h  Component.h  HBox.h  Rectangle.h  Slider.h  Text.h  VBox.h
include/Graphics/Menu/: ColorSelectorMenu.h  EscapeMenu.h  Menu.h  SettingsMenu.h
include/Graphics/Menu/skeleton/: menu_skeleton.h
include/Graphics/Screen/: Screen.h  WorldScreen.h
include/Rendering/: AABBRenderer.h  BlockSelection.h  Image.h  RenderEngine.h  Renderable.h  Shader.h  ShaderProgram.h  Vertex.h
include/Utils/: AABB.h  EnumClassHash.h  Font.h  ICollidable.h  Math.h  Maybe.h  Platforms.h  Utils.h  tuple_fix.h
include/Utils/Events/: IEventHandler.h  IKeyboardEventHandler.h  IMouseEventHandler.h  IResizeEventHandler.h
include/World/: Block.h  BlockFace.h  Chunk.h  World.h
lib/: CMakeLists.txt
resources/: fragment-shader-no-light.glsl  fragment-shader.glsl  vertex-shader.glsl
src/: Block.cpp  CMakeLists.txt  Chunk.cpp  Exception.cpp  Game.cpp  Game.h  IRenderable.cpp  Platforms.h  Player.cpp  Player.h  RenderEngine.cpp  World.cpp  main.cpp
src/Debug/: CMakeLists.txt  DebugOptions.cpp  DebugOptions.h
src/Debug/Graphics/: CMakeLists.txt  FPSCounter.cpp  FPSCounter.h
src/Exception/: AlreadyInitializedException.h  CMakeLists.txt  Exception.cpp  Exception.h  Exception_Linux.cpp  Exception_Windows.cpp  NotYetInitializedException.h  NullMaybeException.h  NullptrException.h  OutOfRangeException.h  SegmentationFaultException.h  ShaderCompilationFailureException.h
src/Graphics/: CMakeLists.txt  Screen.h  WorldScreen.cpp  WorldScreen.h
src/Graphics/Components/: Button.cpp  Button.h  CMakeLists.txt  Component.cpp  Component.h  HBox.cpp  Rectangle.cpp  Slider.h  Text.cpp  VBox.cpp
src/Graphics/Menu/: CMakeLists.txt  ColorSelectorMenu.cpp  ColorSelectorMenu.h  EscapeMenu.cpp  EscapeMenu.h  Menu.cpp  Menu.h  SettingsMenu.cpp  new_menu.sh
src/Graphics/Menu/skeleton/: menu_skeleton.cpp  menu_skeleton.h
src/Graphics/Screen/: Screen.h  WorldScreen.cpp  WorldScreen.h
src/Rendering/: AABBRenderer.cpp  AABBRenderer.h  BlockSelection.cpp  BlockSelection.h  CMakeLists.txt  IRenderable.cpp  IRenderable.h  Image.cpp  RenderEngine.cpp  RenderEngine.h  Renderable.cpp  Renderable.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Vertex.h  stb_image.cpp
src/Screen/: Screen.h  WorldScreen.cpp  WorldScreen.h
src/Utils/: AABB.cpp  AABB.h  CMakeLists.txt  EnumClassHash.h  Font.cpp  Font.h  ICollidable.cpp  ICollidable.h  Math.h  Maybe.h  Utils.h  tuple_fix.h
src/Utils/Events/: EventHandler.h  IMouseEventHandler.h  KeyboardEventHandler.h  MouseEventHandler.h  ResizeEventHandler.h
src/World/: Block.cpp  Block.h  BlockFace.cpp  BlockFace.h  CMakeLists.txt  Chunk.cpp  Chunk.h  World.cpp  World.h
